# mcp-content-pipeline

./: .eval-gate.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml  release.yml
eval/: dataset.json
src/mcp_content_pipeline/: __init__.py  config.py  server.py
src/mcp_content_pipeline/models/: schemas.py
src/mcp_content_pipeline/services/: claude_client.py  gemini_client.py  github_client.py  transcript.py  x_client.py  x_digest_client.py  youtube_api.py
src/mcp_content_pipeline/tools/: analyse_video.py  analyse_x_feed.py  batch_analyse.py  generate_image.py  list_channel_videos.py  sync_to_github.py
tests/: conftest.py  test_analyse_video.py  test_analyse_x_feed.py  test_batch_analyse.py  test_claude_client.py  test_gemini_client.py  test_generate_image.py  test_list_channel_videos.py  test_sync_to_github.py  test_transcript_service.py  test_video_digest_client.py  test_x_client.py  test_x_digest_client.py
