[project]
name = "mcp-content-pipeline"
version = "0.13.0"
description = "YouTube video analysis and X feed digest pipeline exposed as MCP tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Berkay Yildirim" }]
keywords = ["mcp", "youtube", "content", "analysis", "claude", "twitter", "x-api", "digest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]",
    "anthropic",
    "google-api-python-client",
    "google-genai",
    "pygithub",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-slugify",
    "httpx",
]

[project.urls]
Repository = "https://github.com/berkayildi/mcp-content-pipeline"

[project.scripts]
mcp-content-pipeline = "mcp_content_pipeline.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_content_pipeline"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/mcp_content_pipeline/services/video_digest_client.py" = ["E501"]
"src/mcp_content_pipeline/services/x_digest_client.py" = ["E501"]
"tests/*" = ["E501"]
